# PFA

./: .gitlab-ci.yml  CITATION.cff  COPYRIGHT  README.md  pyproject.toml  requirements.txt
PNV/data/outputs/: 20_class_combined.pkl  20_class_combined.xlsx  20_class_different_sheets.xlsx  6_class_combined.pkl  6_class_combined.xlsx  6_class_different_sheets.xlsx  README.md
PNV/data/preprocessed/: README.md
PNV/data/raw/: README.md  geo_data.csv
PNV/paths/: paths.py
PNV/src/: base_logger.py  datamanager.py  datapreprocces.py  defines.py  logic.py  main.py
PNV/toolbox/: data_analysis.py
PNV/user_input/: default_parameters.py
paper/: paper.bib  paper.md
test/: test_PNV.py
