[build-system]
requires = ["setuptools==75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PFA"
version = "1.0.0"
authors = [
    {name = "Julia Tandetzki", email = "julia.tandetzki@thuenen.de"},
    {name = "Tomke Honkomp", email = "tomke.honkomp@thuenen.de"}
]
description = "The PFA package allows to process and vizualise remote sensing data of potential natural vegetation"
readme = "README.md"
license = {file = "COPYING.txt"}
keywords = ["potential natural vegetation", "remote sensing", "optimization", "forest economics", "climate change"]

requires-python = ">=3.8.9"
dependencies = [
    "matplotlib==3.8.2",
    "rasterio==1.3.6",
    "numpy==1.26.4",
    "geopandas==0.12.2",
    "shapely==1.8.0",
    "pickle-mixin==1.0.2",
    "pandas==1.5.3",
    "earthengine-api==0.1.347",
    "geemap==0.32.1",
    "xlsxwriter==3.1.2",
    "seaborn==0.13.2",
    "tqdm==4.66.5",
    "coverage==7.6.1",
    "tomli==2.0.2"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://placeholder.com"
Documentation = "https://placeholder.org"
Repository = "https://github.com/TI-FSM"
Issues = "https://github.com/TI-FSM/me/spam/issues"
Changelog = "https://github.com/TI-FSM/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
run_pnv = "PNV.src.main.main: main"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.run]
branch = true
include = ["PNV/*"]
command_line = "-m unittest discover -s test"